# VkDeferredRenderer

./: .gitignore  .gitmodules  CMakeLists.txt
shaders/: compile.bat  gpass.frag  gpass.frag.spv  gpass.vert  gpass.vert.spv  light.frag  light.frag.spv  light.vert  light.vert.spv
src/: VkBackend.cpp  VkBackend.h  Vk_utils.cpp  Vk_utils.h  graphics_backend.h  main.cpp  model.cpp  model.h  renderer.h  vk_backend.cpp  vk_backend.h  vk_utils.cpp  vk_utils.h
